<resources>
    <string name="app_name">MegaOperaciones</string>
    <string name="titulo">Mega Calculadora</string>
    <string name="resultado">Resultado:</string>
    <string name="primer_numero">Primer Número</string>
    <string name="segundo_numero">Segundo Número</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje_error_num1">Digite el número 1</string>
    <string name="mensaje_error_num2">Digite el número 2</string>
    <string name="opciones">Operaciones</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="division">División</string>
    <string-array name="operaciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
    <string name="errorDivisionCero">No puede dividirse entre 0</string>
</resources>
